[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "searchkit"
description = "Library provided tools used to search files concurrently."
requires-python = ">=3.8"
readme="README.md"
version = "0.1.20"
dependencies = [
    'importlib-metadata; python_version >= "3.8"',
    'fasteners',
]
